--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -1,5 +1,5 @@
 <!-- 多说评论框 start -->
-	<div class="ds-thread" data-thread-key="{% if page.title %}{{ page.title }} &#8211; {% endif %}{{ site.title }}" data-title="{% if page.title %}{{ page.title }} &#8211; {% endif %}{{ site.title }}" data-url="{% if link.external %}{{ link.url }}{% else %}{{ site.url }}{{ link.url }}{% endif %}"></div>
+	<div class="ds-thread" data-thread-key="{% if page.title %}{{ page.title }} &#8211; {% endif %}{{ site.title }}" data-title="{% if page.title %}{{ page.title }} &#8211; {% endif %}{{ site.title }}" data-url="{{ site.url }}{{ page.url }}"></div>
 <!-- 多说评论框 end -->
 <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
 <script type="text/javascript">
